--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,8 @@
 {
-  "singleQuote": true
+  "plugins": [
+    "@prettier/plugin-pug"
+  ],
+  "singleQuote": true,
+  "printWidth": 80,
+  "trailingComma": "es5"
 }
