--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@prettier/plugin-pug": "^2.4.1",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -24,10 +25,15 @@
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "eslint-plugin-vue-pug": "^0.5.5",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "sass": "^1.58.3",
+    "sql.js": "^1.8.0",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-pug": "^0.3.2",
     "vue-tsc": "^1.0.12"
   }
 }
